--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   <link rel="stylesheet" href="css/place-kitty.css">
 </head>
 <body>
+  .parent-element {
+    position: relative;
+  }
+  
+  .child-element {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+  }
   <div class="wrapper">
+    
+</div>
     <!-- Wheelbarrow -->
     <div id="wheelbarrow"></div>
     <div id="wheelbarrow-foreground"></div>
@@ -30,6 +41,7 @@
     
 
   </div><!-- .wrapper -->
+  
   <audio id="player1">
     <source src="audio/purrr.mp3" type="audio/mp3">
     <source src="audio/purrr.ogg" type="audio/ogg">
